--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -196,4 +196,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="center">وسط</string>
     <string name="center_text">متن وسط باشد</string>
     <string name="please_wait">لطفاً منتظر بمانید</string>
+    <string name="show_completion_date">Show completion date</string>
+    <string name="showing_completion_date_for_a_todo">Show completion date for todos</string>
 </resources>
