--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -375,4 +375,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Não foi possível descriptografar o conteúdo do arquivo. Você usou uma senha errada? O arquivo é realmente criptografado com criptografia AES Markors.</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Senha já definida. Definir uma nova senha irá sobrescrever a senha existente e talvez você não consiga mais acessar os arquivos caso você esqueça a senha.</string>
     <string name="code_block">Bloco de código</string>
+    <string name="show_completion_date">Show completion date</string>
+    <string name="showing_completion_date_for_a_todo">Show completion date for todos</string>
 </resources>
