--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -122,7 +122,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="document_browser">Explorateur de documents</string>
     <string name="file_browser">Explorateur de fichiers</string>
     <string name="set_due_date">Définir la date d\'échéance</string>
-    <string name="insert_replace_date">Insert date</string>
+    <string name="insert_replace_date">Insérer la date</string>
     <string name="create_note" needed="false">Nouvelle note</string>
     <string name="special_documents" needed="false">Documents spéciaux</string>
     <string name="keep_screen_on" needed="false">Garder l\'écran allumé</string>
@@ -140,7 +140,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlighting_delay_lower_value_more_battery_drain_description__appspecific">Délai de rafraîchissement de la coloration syntaxique en ms. Une faible valeur affiche la coloration plus tôt, mais réduit les performances de l\'application et consomme plus de batterie.</string>
     <string name="highlighting_enabled_or_not__appspecific">Détermine si le texte entré doit être coloré syntaxiquement ou pas</string>
     <string name="control_font_size_in_editor">Fixe la taille de la police de caractères utilisée dans l\'éditeur</string>
-    <string name="textactions_show_useful_actions_description__appspecific">Affiche une barre d\'outils de texte couramment utilisés</string>
+    <string name="textactions_show_useful_actions_description__appspecific">Affiche une barre avec des boutons pratiques en bas. Ces actions de texte modifient le texte ou exécutent une action basée sur le texte.</string>
     <string name="load_last_opened_folder_at_startup">Charger le dernier dossier ouvert au démarrage suivant</string>
     <string name="format">Format</string>
     <string name="contexts">Contextes</string>
@@ -176,8 +176,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="special_key">Touches spéciales</string>
     <string name="key_page_up">Page précédente</string>
     <string name="key_page_down">Page suivante</string>
-    <string name="move_text_one_line_up">Déplacer un texte vers le haut</string>
-    <string name="move_text_one_line_down">Déplacer le texte vers le bas</string>
+    <string name="move_text_one_line_up">Déplacer le texte une ligne vers le haut</string>
+    <string name="move_text_one_line_down">Déplacer le texte une ligne vers le bas</string>
     <string name="key_pos_1">Début de ligne</string>
     <string name="key_pos_end">Fin de ligne</string>
     <string name="key_pos_1_document">Début de document</string>
@@ -331,30 +331,30 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tools">Outils</string>
     <string name="reading">Lecture</string>
     <string name="read">Lire</string>
-    <string name="table">Table</string>
-    <string name="how_much_columns_press_table_button_long_to_start_table">Combien de colonnes ? Appuyez sur le bouton de table pour démarrer une table (en-tête d\'insertion), appuyez sur court pour ajouter une ligne.</string>
-    <string name="example_of_a_markdown_table">Exemple de table Markdown</string>
+    <string name="table">Tableau</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Combien de colonnes ? Appuyez sur le bouton du tableau pour commencer un nouveau tableau (insertion d\'entête), appuyez sur \"short\" court pour ajouter une ligne.</string>
+    <string name="example_of_a_markdown_table">Exemple de tableau Markdown</string>
     <string name="delete_lines">Supprimer les lignes</string>
     <string name="unordered_list">Liste non ordonnée</string>
     <string name="ordered_list">Liste ordonnée</string>
-    <string name="check_list">Liste de vérification</string>
+    <string name="check_list">Liste de contrôle</string>
     <string name="open_link">Ouvrir le lien</string>
     <string name="common_color_picker">Sélecteur de couleurs</string>
     <string name="date_and_time">Date et heure</string>
     <string name="jump_to_bottom">Aller en bas</string>
-    <string name="quote">Devis</string>
+    <string name="quote">Citation</string>
     <string name="heading">Titre</string>
     <string name="heading_1">Titre 1</string>
     <string name="heading_2">Titre 2</string>
     <string name="heading_3">Titre 3</string>
     <string name="bold">Gras</string>
     <string name="italic">Italique</string>
-    <string name="strikeout">Retrait</string>
+    <string name="strikeout">Barré</string>
     <string name="inline_code">Code en ligne</string>
     <string name="horizontal_line">Ligne horizontale</string>
-    <string name="toggle_done">Basculer terminé</string>
+    <string name="toggle_done">Clicker terminé</string>
     <string name="link_color">Couleur du lien</string>
-    <string name="add_context">Ajouter contexte</string>
+    <string name="add_context">Ajouter un contexte</string>
     <string name="add_project">Ajouter un projet</string>
     <string name="archive_completed_tasks">Archiver les tâches terminées</string>
     <string name="sort_alphabetically">Trier par ordre alphabétique</string>
@@ -364,11 +364,11 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="back">Retour</string>
     <string name="expand_collapse">Développer / Réduire</string>
     <string name="essential">Essentiel</string>
-    <string name="append_human_readable_uuid_to_new_tasks">Ajouter un UUID lisible par l\'homme aux nouvelles tâches</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Ajouter un UUID intelligible aux nouvelles tâches</string>
     <string name="action_order">Ordre des actions</string>
     <string name="load_default_settings">Charger les paramètres par défaut</string>
     <string name="drag">Glisser</string>
-    <string name="file_encryption_password">Mot de passe de cryptage du fichier</string>
+    <string name="file_encryption_password">Mot de passe de chiffrement de fichier</string>
     <string name="no_password_set_cannot_encrypt_decrypt">Aucun mot de passe défini, ne peut pas chiffrer ou déchiffrer.\nAllez dans Paramètres -&gt; Général -&gt; Mot de passe pour définir un mot de passe.</string>
     <string name="encrypt_file_content">Chiffrer le contenu du fichier</string>
     <string name="could_not_encrypt_file_content_the_file_was_not_saved">Impossible de chiffrer le contenu du fichier. Le fichier n\'a pas été enregistré.</string>
