[ci skip] Crowdin translation bot: New translations for Finnish

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -121,6 +121,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">Tiedostot ja kansiot</string>
     <string name="document_browser">Asiakirjaselain</string>
     <string name="file_browser">Tiedostoselain</string>
+    <string name="set_due_date">Aseta eräpäivä</string>
+    <string name="insert_replace_date">Insert date</string>
     <string name="create_note" needed="false">Luo muistiinpano</string>
     <string name="special_documents" needed="false">Erikoisasiakirjat</string>
     <string name="keep_screen_on" needed="false">Pidä näyttö päällä</string>
@@ -162,6 +164,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="highlight_line_ending_if_two_or_more_spaces">Korosta kahden tai useamman välilyönnin sisältävien rivien loput</string>
     <string name="use_monospace_for_code">Käytä koodiin kiinteävälistä fonttia</string>
     <string name="disable_code_block_highlight">Poista koodilohkojen korostus käytöstä</string>
+    <string name="auto_renumber_ordered_list">Järjestä listat automaattisesti</string>
+    <string name="auto_renumber_ordered_list_slowdown">Tämä valinta voi vaikuttaa sovelluksen suorituskykyyn.</string>
     <string name="use_different_fonttype_slow_down">Käytä eri kirjasintyyppiä. Sen muuttaminen vaikuttaa dynaamisesti sovelluksen suorituskykyyn.</string>
     <string name="general">Yleiset</string>
     <string name="resources">Resurssit</string>
@@ -225,7 +229,56 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="disable_spelling_underline">Poista oikeinkirjoituksen alleviivaus käytöstä</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Näppäimistöehdotukset pysyvät, punainen alleviivaus katoaa</string>
     <string name="location">Sijainti</string>
+    <string name="text_lines">Tekstin Rivit</string>
+    <string name="text_characters">Tekstin Merkit</string>
+    <string name="text_words">Tekstin Sanat</string>
+    <string name="directory">Hakemisto</string>
+    <string name="recently_viewed_documents">Äskettäin katsotut asiakirjat</string>
+    <string name="details">Yksityiskohdat</string>
+    <string name="calendar">Kalenteri</string>
+    <string name="warning_disallowed_sd_access">Varoitus! Sovelluksella ei ole oikeuksia tallentaa tätä tiedostoa, kaikki muutokset menetetään. Ongelmaa ei ole mahdollista ratkaista tai vahvistaa jotain, Android kieltää pääsyn täällä.</string>
+    <string name="error_picture_selection">Kuvaa ei ole valittu, otettu tai tallennettu.</string>
+    <string name="gallery_picture">Galleria kuva</string>
+    <string name="camera_picture">Kameran kuva</string>
+    <string name="enable_undo_and_redo_be_patient">Ota käyttöön kumoamis- ja uudelleenpäivitystoiminnot. Vain edistykselliseen käyttöön, ole kärsivällinen, jos et poista jotain tärkeää. Sulje ja avaa editori tyhjentää historiaa.</string>
+    <string name="description">Kuvaus</string>
+    <string name="edit_picture">Muokkaa kuvaa</string>
+    <string name="math">Matematiikka</string>
+    <string name="table_of_contents">Sisällön taulukko</string>
+    <string name="miscellaneous">Sekalaiset</string>
+    <string name="textaction">Tekstin toiminto</string>
+    <string name="textactions">Tekstin toiminnot</string>
+    <string name="prefer_view">Suosi näkymää</string>
+    <string name="no_calendar_app_is_installed">Kalenterisovellusta ei ole asennettu!</string>
+    <string name="popular_documents">Suositut asiakirjat</string>
+    <string name="color">Väri</string>
+    <string name="zero_width_space">Tila nollaleveydelle</string>
+    <string name="basic_color_scheme">Perusväriteema</string>
+    <string name="background_foreground_color_in_editor_works_dark_light">Muuttaa tekstin editorin taustan ja edustan väriä. Mukautukset sovellusteemaan, joten saatavilla vaaleassa ja tummassa teemassa. Syntaksin korostus värit pysyvät samoina.</string>
+    <string name="preset">Preset</string>
+    <string name="foreground">Etuala</string>
+    <string name="background">Tausta</string>
+    <string name="set_foreground_or_background_color_hexcolor_also_possible">Aseta tekstin etu- tai taustaväri? Hex-värikoodin lisääminen on myös mahdollista.</string>
+    <string name="type">Tyyppi</string>
+    <string name="folder">Kansio</string>
+    <string name="folder_is_created_without_extension">- Kansio on luotu ilman tiedostopäätettä</string>
     <string name="keep_existing_file">- Tiedostoja ja kansioita ei ylikirjoiteta</string>
+    <string name="multiple_windows">Useat ikkunat</string>
+    <string name="font">Font</string>
+    <string name="open_new_documents_always_in_new_window">Avaa asiakirjat aina erillisissä ikkunoissa. Vaihda laitteen \'viimeisimmät\' -avaimella.</string>
+    <string name="enter_or_select_format">Syötä tai valitse muoto</string>
+    <string name="pick_date">Valitse päivämäärä</string>
+    <string name="pick_time">Valitse aika</string>
+    <string name="get_format_instead_date_or_time">Hanki muoto sen sijaan päivämäärä tai aika</string>
+    <string name="always_use_current_date_and_time">Käytä aina nykyistä päivämäärää &amp; aikaa</string>
+    <string name="result">Tulos</string>
+    <string name="just_time">Vain aika</string>
+    <string name="just_date">Vain päivämäärä</string>
+    <string name="last_used">Viimeksi käytetty</string>
+    <string name="my_note">my_huomio</string>
+    <string name="close">Sulje</string>
+    <string name="cancel">Peruuta</string>
+    <string name="do_you_like_this_project_want_donate_to_keep_alive">Nauttitko tästä projektista? Haluatko tukea lisäparannuksia ja korjauksia?\n\nSovellusten kehittäminen ja niihin liittyvien blogiviestien kirjoittaminen vie paljon aikaa! Jos haluat auttaa projektia jatkamaan, ota huomioon pieni lahjoitus!\n\nTämä projekti on kehitetty vapaa-ajalla, täysin ilmaiseksi ja ilman mainoksia!</string>
     <string name="app_start_tab">Aloitusvälilehti</string>
     <string name="tab_to_select_at_start">Valittava välilehti sovelluksen käynnistyessä</string>
     <string name="swipe_to_change_mode">Pyyhkäise vaihtaaksesi tilaa</string>
@@ -236,8 +289,92 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="appdata_private">AppData (yksityinen)</string>
     <string name="appdata_sdcard">AppData (muistikortti)</string>
     <string name="internal_storage">Sisäinen tallennustila</string>
+    <string name="open_the_document_from_main_view">Voit avata asiakirjan päänäkymästä alhaalla, tiedostoselain tai kantorakettien päänäkymästä. Myös Markoriin on mahdollista liittää yhteinen teksti.</string>
     <string name="notebook_is_the_home_of_your_files">Muistiinpanot on kansio, jonka Markor lataa tiedostoselaimeen, kun sovellus käynnistetään. Se on tiedostojesi kotikansio.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote on nopein vaihtoehto muistiinpanojen kirjoittamiseen. Se on tiedosto Markdown-muodossa, jonka oletussijainti on &gt;Notebook/QuickNote.md&lt;, voit määrittää mukautetun tiedostopolun asetuksissa.</string>
     <string name="todo_is_the_easiest_way_">Hallitse tehtäviäsi ToDo:lla. Se on tiedosto todo.txt-muodossa, jonka oletussijainti on &gt;Notebook/todo.txt&lt;, voit määrittää mukautetun tiedostopolun asetuksissa.</string>
+    <string name="navigationbar_color">Navigointipalkin väri</string>
+    <string name="black">Musta</string>
+    <string name="white">Valkoinen</string>
+    <string name="view">Näytä</string>
+    <string name="view_mode">Näytä tila</string>
+    <string name="edit_mode">Muokkaa tilaa</string>
+    <string name="mount_storage">Yhdistä tallennustila</string>
+    <string name="application_needs_access_to_storage_mount_it">Lupa tarvitaan tämän tallennustilan käyttämiseen. Ota tallennustila käyttöön ottaaksesi. Vahvista tämä ikkuna saadaksesi ponnahdusikkunan. Valitse tallennustila sinne ja paina valintaa.</string>
+    <string name="share_into">Jaa sisään</string>
+    <string name="favourite">Suosikki</string>
+    <string name="favourites">Suosikit</string>
+    <string name="please_wait">Odota hetki</string>
+    <string name="app_start_folder">Sovelluksen aloituskansio</string>
+    <string name="tab_width">Tab width</string>
+    <string name="amount_of_space_for_tab">Avaruusmerkkien määrä näytetään taulukkorivillä</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Valittu tiedosto voi olla plaintext-tiedosto. Haluatko avata sen editorissa tai toisessa sovelluksessa?\n\nÄlä yritä avata binääritiedostoja. Jos et ole varma, avaa toisella sovelluksella.</string>
+    <string name="list_in_recent_files">Lista viimeaikaisista tiedostoista</string>
+    <string name="reload">Reload</string>
+    <string name="wrap_words">Rivitä sanat</string>
+    <string name="soft_break_if_not_fit_to_width_else_enable_horizontal_scrolling">Pehmeä tauko, jos teksti ei sovi näytön leveyteen.</string>
+    <string name="recursive_search_in_current_directory">Rekursiivinen haku nykyiseen hakemistoon. Kun kysely sisältää asteriskin (*) regex-haun käytetään, muuten tarkista, onko kysely sisältää.</string>
+    <string name="always_open_with_this_app">Avaa aina tällä sovelluksella</string>
+    <string name="always_open_files_with_this_app_when_list_contains_file_extension">Avaa aina tiedostoja tällä sovelluksella, kun lista sisältää tiedostopäätteen. Käytä \'Ei mitään, .html, . ss , .js esimerkiksi jos haluat muokata web-tiedostoja ja niitä ilman tiedostopäätettä.</string>
+    <string name="template">Malli</string>
+    <string name="send_debug_log">Lähetä Vianetsintäloki</string>
+    <string name="help_by_sending_debug_information_to_the_developer">Auta lähettämällä vianetsintätietoja kehittäjille tai kehittäjille. Tiedot lähetetään sähköpostitse sähköpostin kautta ja näet kaikki lähetetyt tiedot ennen lähettämistä. Löydät ylimääräisen \"Lähetä debug loki\" -vaihtoehdon ylävalikosta, kun se on käytössä. Se luo sähköpostin luonnoksen.</string>
+    <string name="print_pdf">Print / PDF</string>
+    <string name="bigger_headings">Suurempi otsikko</string>
+    <string name="increase_text_size_of_headings_according_to_level">Lisää otsikoiden tekstikokoa tason mukaan (# h1, ## h2. ### h3…)</string>
+    <string name="current">Nykyinen</string>
+    <string name="record_audio">Nauhoita Ääntä</string>
+    <string name="attach">Liitä</string>
+    <string name="copy_file">Kopioi tiedosto</string>
+    <string name="page">Sivu</string>
+    <string name="experimental_features">Kokeelliset ominaisuudet</string>
+    <string name="tools">Työkalut</string>
+    <string name="reading">Luetaan</string>
+    <string name="read">Lue</string>
+    <string name="table">Taulukko</string>
+    <string name="how_much_columns_press_table_button_long_to_start_table">Kuinka paljon saraketta? Paina pöytäpainiketta pitkään aloittaaksesi taulukon (aseta otsikko), paina lyhyttä lisätäksesi rivi.</string>
+    <string name="example_of_a_markdown_table">Esimerkki Markdown-taulukosta</string>
+    <string name="delete_lines">Poista rivit</string>
+    <string name="unordered_list">Järjestämätön lista</string>
+    <string name="ordered_list">Järjestetty lista</string>
+    <string name="check_list">Tarkista lista</string>
+    <string name="open_link">Avaa linkki</string>
+    <string name="common_color_picker">Värin valitsin</string>
+    <string name="date_and_time">Päivämäärä ja kellonaika</string>
+    <string name="jump_to_bottom">Siirry alareunaan</string>
+    <string name="quote">Tarjous</string>
+    <string name="heading">Otsikko</string>
+    <string name="heading_1">Otsake 1</string>
+    <string name="heading_2">Otsake 2</string>
+    <string name="heading_3">Otsake 3</string>
+    <string name="bold">Bold</string>
+    <string name="italic">Italic</string>
+    <string name="strikeout">Yliviivattu</string>
+    <string name="inline_code">Sisäinen koodi</string>
+    <string name="horizontal_line">Vaakasuora viiva</string>
+    <string name="toggle_done">Vaihda valmis</string>
+    <string name="link_color">Linkin väri</string>
+    <string name="add_context">Lisää konteksti</string>
+    <string name="add_project">Lisää projekti</string>
+    <string name="archive_completed_tasks">Arkistoi suoritetut tehtävät</string>
+    <string name="sort_alphabetically">Lajittele aakkosjärjestyksessä</string>
+    <string name="create_new_file_or_folder">Luo uusi tiedosto tai kansio</string>
+    <string name="choose_format">Valitse muoto</string>
+    <string name="selected">Valittu</string>
+    <string name="back">Takaisin</string>
+    <string name="expand_collapse">Laajenna / Tiivistä</string>
+    <string name="essential">Olennainen</string>
+    <string name="append_human_readable_uuid_to_new_tasks">Lisää ihmisen luettavissa oleva UUID uusiin tehtäviin</string>
+    <string name="action_order">Toiminnon järjestys</string>
+    <string name="load_default_settings">Lataa oletusasetukset</string>
+    <string name="drag">Vedä</string>
+    <string name="file_encryption_password">Tiedoston salauksen salasana</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">Salasanaa ei ole asetettu, salattu tai salauksen purku.\nMene Asetukset -&gt; Yleiset -&gt; Salasana salasanan asettamiseksi.</string>
+    <string name="encrypt_file_content">Salaa tiedoston sisältö</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">Tiedoston sisältöä ei voitu salata. Tiedostoa ei tallennettu.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Tiedoston sisältöä ei voitu purkaa. Käytetkö väärää salasanaa? Onko tiedosto todella salattu Markors AES salauksella?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Salasana on jo asetettu. Uuden salasanan asettaminen ylikirjoittaa olemassa olevan, etkä välttämättä pääse enää käsiksi tiedostoihisi, jos unohdat salasanan.</string>
+    <string name="code_block">Koodilohko</string>
+    <string name="add_completion_date">Lisää valmistumispäivä</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Lisää todoksen valmistumispäivä kun merkitään ne valmiiksi</string>
 </resources>
