--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -375,4 +375,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">Conținutul fișierului nu a putut fi decriptat. Ați folosit o parolă greșită? Este fișierul criptat cu criptarea Markors AES?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">Parola este deja setată. Setarea unei noi parole va suprascrie parola existentă și este posibil să nu mai puteți accesa fișiere, în cazul în care uitați parola.</string>
     <string name="code_block">Bloc cod</string>
+    <string name="add_completion_date">Adăugare dată finalizare</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Adaugă data finalizării pentru todos când le marchezi ca terminate</string>
 </resources>
