[ci skip] Crowdin translation bot: New translations for Catalan

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -375,4 +375,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">No s\'ha pogut desxifrar el contingut del fitxer. Heu utilitzat una contrasenya errònia? El fitxer s\'ha xifrat realment amb el xifrat AES del Markor?</string>
     <string name="password_already_set_setting_a_new_password_will_overwrite">La contrasenya ja està definida. Establir una nova sobreescriurà la contrasenya existent i és possible que ja no pugueu accedir als fitxers en cas que oblideu la contrasenya.</string>
     <string name="code_block">Bloc de codi</string>
+    <string name="add_completion_date">Afegeix data de finalització</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">Afegeix la data de finalització per a tots al marcar-los com fets</string>
 </resources>
