--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -127,8 +127,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="special_documents" needed="false">Spezielle Dokumente</string>
     <string name="keep_screen_on" needed="false">Bildschirm nicht ausschalten</string>
     <string name="back_to_previous_folder" needed="false">Zurück zum vorherigen Ordner</string>
-    <string name="app_settings" needed="false">App Einstellungen</string>
-    <string name="editor_settings" needed="false">Editor Einstellungen</string>
+    <string name="app_settings" needed="false">App-Einstellungen</string>
+    <string name="editor_settings" needed="false">Editor-Einstellungen</string>
     <string name="remember_last_folder_location_on_startup" needed="false">Letzten Ordner merken</string>
     <string name="number_of_files_witharg" needed="false">Anzahl der Dateien: %d</string>
     <string name="app_wide">Global</string>
